--- a/dashboard/static/css/style.css
+++ b/dashboard/static/css/style.css
@@ -372,6 +372,7 @@ box-shadow: 0px 2px 3px 0px rgba(235,228,235,1);
 	bottom: 0px;
 	height: auto;
 	position: fixed;
+	overflow: visible;
 }
 
 .left-off-canvas-menu {
@@ -625,6 +626,55 @@ ul.off-canvas-list li a, ul.off-canvas-list li.no-link {
 	background-position: center;
 }
 
+.colapsed #icon_colapse { background-image: url('../img/icon_colapse.png');	}
+
+
+
+.left-slide-menu {
+	display: none;
+	position: fixed;
+	list-style-type: none;
+	overflow: hidden;
+    margin: 0;
+    padding: 0;
+	background-color: #444444;
+	width: 46px;
+	transition: width 0.5s;
+	white-space: nowrap;
+	height: 46px;
+}
+
+.left-slide-menu li:first-child{
+	background-color: #333333;
+}
+
+
+
+.left-slide-menu li {
+	display: inline-block;
+}
+
+
+.left-slide-menu li a {
+	display: block;
+    text-align: center;
+    padding: 10px;
+    text-decoration: none;
+    background-repeat: no-repeat;
+    background-size: cover;
+    margin: 13px;
+}
+
+.open#left-slide-button {
+	background-image: url('../img/icon_colapse_r.png');
+}
+
+#left-slide-button {
+	background-image: url('../img/icon_colapse.png');
+}
+
+
+
 
 #icon_drive:before {
 	position: absolute;
@@ -648,7 +698,7 @@ ul.off-canvas-list li a, ul.off-canvas-list li.no-link {
 
 
 
-.colapsed #icon_colapse { background-image: url('../img/icon_colapse.png');	}
+
 
 /****** Right Menu ******/
 
@@ -1985,14 +2035,13 @@ input[type='range']:focus {
 }
 
 
-
-@media screen and (max-width: 1160px) {
+@media (max-width: 1160px) and (min-height: 538px)   {
 	.manual-drive-modal {
 		width: 80%; 
 	}
 }
 
-@media screen and (max-width: 650px) {
+@media (max-width: 650px  ) and (min-height: 538px)  {
 	.manual-drive-modal {
 		width: 100%; 
 		height: 100%;
@@ -2101,6 +2150,26 @@ input[type='range']:focus {
 		height: 50%;
 	} */
 }
+
+@media (max-height: 539px) {
+	#widget-links-general{
+		display:none
+	}
+	.left-slide-menu{
+		display:block;
+	}
+
+	.manual-drive-modal {
+		width: 100%; 
+		height: 100%;
+		max-height: none;
+		padding-top: 0;
+		min-height: 0;
+	}
+}
+
+
+
 
 
 .newModal{
