--- a/dashboard/static/css/style.css
+++ b/dashboard/static/css/style.css
@@ -37,10 +37,10 @@ body {
 	background-color: #eee;
 }
 
-.off-canvas-wrap, .inner-wrap {
+#main{
 	height: auto;
 	margin-bottom:0px;
-	padding-top: 1.75rem;
+	padding-top: 3.5rem;
 }
 
 /* ********** Top Bar Settings ********** */
@@ -280,7 +280,7 @@ box-shadow: 0px 2px 3px 0px rgba(235,228,235,1);
     min-width: 222px;
 	bottom: 0;
 	z-index: 1002;
-	transition: all 0.5s;
+	transition: right 0.5s;
 }
 
 /* .dro-dropdown {
