--- a/dashboard/static/css/style.css
+++ b/dashboard/static/css/style.css
@@ -609,6 +609,7 @@ ul.off-canvas-list li a, ul.off-canvas-list li.no-link {
 #icon_colapse 		{ background-image: url('../img/icon_colapse_r.png');}
 #icon_edit 			{ background-image: url('../img/icon_folder.png');}
 #icon_editor 		{ background-image: url('../img/icon_editor.png');}
+#icon_video 		{ background-image: url('../img/icon_video.png');}
 #icon_handwheel 	{ background-image: url('../img/icon_refresh.png');}
 #icon_log 			{ background-image: url('../img/icon_log.png');	}
 #icon_network 		{ background-image: url('../img/icon_network.png');	}
