--- a/dashboard/static/css/style.css
+++ b/dashboard/static/css/style.css
@@ -1045,7 +1045,7 @@ ul.off-canvas-list li a, ul.off-canvas-list li.no-link {
 	color: #F0F0F0;
 	font-size: 20px;
 	font-family: 'source_sans_proextralight';
-    white-space: nowrap;
+    /*white-space: nowrap;*/
 	text-align: center;
 
 }
