refs #48672 modal styling.

--- a/dashboard/static/css/style.css
+++ b/dashboard/static/css/style.css
@@ -2243,7 +2243,16 @@ input[type='range']:focus {
     bottom: 0;
 }
 
+.modalInput{
+	width: 50%;
+	padding-left: 25%;
+}
 
+.inputError {
+	display:none;
+	font-size: small;
+	color: #dc3545;
+}
 
 .modalDialogue{
     text-align: center;
