--- a/dashboard/static/css/style.css
+++ b/dashboard/static/css/style.css
@@ -355,7 +355,8 @@ box-shadow: 0px 2px 3px 0px rgba(235,228,235,1);
 #tool-name {
   max-width: 16em;
   overflow: hidden;
-  white-space: nowrap
+  white-space: nowrap;
+  color: white;
 }
 
 #left-position-container {
