--- a/dashboard/static/css/style.css
+++ b/dashboard/static/css/style.css
@@ -2279,6 +2279,14 @@ input[type='range']:focus {
 	color: #dc3545;
 }
 
+.modalDetail {
+    text-align: center;
+    display: inline-block;
+    margin-right: 1em;
+    width: 65%;
+    padding: 0;
+}
+
 .modalDialogue{
     text-align: center;
     font-size: 20px;
