Fix a missing } in dashboard/apps/configuration.fma/css/style.css caught by prettier

--- a/dashboard/apps/configuration.fma/css/style.css
+++ b/dashboard/apps/configuration.fma/css/style.css
@@ -483,6 +483,7 @@ table {
 
 #section-machine-id {
   display: none;
+}
 
 input[type=number]::-webkit-inner-spin-button,
 input[type=number]::-webkit-outer-spin-button {
