Left-align fields in macro editor listing to make them a bit easier to scan

--- a/dashboard/apps/macro_manager.fma/css/style.css
+++ b/dashboard/apps/macro_manager.fma/css/style.css
@@ -140,7 +140,7 @@ th {
     -webkit-appearance: textfield; 
     -moz-appearance: textfield;
      margin: 0; 
-     text-align: center;
+     text-align: left;
 }
 
 .number input {
