Add headers to the macro editor's macro list

--- a/dashboard/apps/macro_manager.fma/css/style.css
+++ b/dashboard/apps/macro_manager.fma/css/style.css
@@ -133,7 +133,8 @@ input[type=number] {
 }
 
 th {
-    text-align: center !important;
+    text-align: left !important;
+    font-weight: bold;
 }
 
 .number input, .name input, .description input{
