A small style update to the macro editor ui for readability (#946)
* Left-align fields in macro editor listing to make them a bit easier to scan

* Add headers to the macro editor's macro list

Co-authored-by: kyle-kingsbury <kyle.kingsbury@shopbottools.com>

--- a/dashboard/apps/macro_manager.fma/css/style.css
+++ b/dashboard/apps/macro_manager.fma/css/style.css
@@ -133,14 +133,15 @@ input[type=number] {
 }
 
 th {
-    text-align: center !important;
+    text-align: left !important;
+    font-weight: bold;
 }
 
 .number input, .name input, .description input{
     -webkit-appearance: textfield; 
     -moz-appearance: textfield;
      margin: 0; 
-     text-align: center;
+     text-align: left;
 }
 
 .number input {
