--- a/dashboard/static/css/style.css
+++ b/dashboard/static/css/style.css
@@ -216,6 +216,13 @@ box-shadow: 0px 2px 3px 0px rgba(235,228,235,1);
 	transition: all 0.2s;
 }
 
+#display-units {
+	text-align: left;
+	margin-left: 10px;
+	font-weight: bold;
+	font-size: 14px;
+}
+
 #right-position-container {
 	cursor: pointer;
 	background-color: #931B14;
