--- a/dashboard/static/css/style.css
+++ b/dashboard/static/css/style.css
@@ -217,10 +217,13 @@ box-shadow: 0px 2px 3px 0px rgba(235,228,235,1);
 }
 
 #display-units {
+	position: absolute;
+	top: 2px;
+	left: 5px;
+	width: 0;
 	text-align: left;
-	margin-left: 10px;
 	font-weight: bold;
-	font-size: 14px;
+	font-size: 17px;
 }
 
 #right-position-container {
