Added routes to pull config values using % variable syntax -- update syntax highlighting for config values and DATA_SEND. Added failsafe in startup when config.opensbp is not available.

--- a/dashboard/apps/editor.fma/css/syntax.css
+++ b/dashboard/apps/editor.fma/css/syntax.css
@@ -7,6 +7,7 @@
 .cm-s-fabmo span.cm-variable { color: #6c0606;}
 .cm-s-fabmo span.cm-variable-2 { color: #69c605; }
 .cm-s-fabmo span.cm-variable-3 { color: #296506; font-weight: bold; }
+.cm-s-fabmo span.cm-variable-4 { color: #9b59b6; font-weight: bold; }
 .cm-s-fabmo span.cm-property { color: black; }
 .cm-s-fabmo span.cm-operator { color: black; }
 .cm-s-fabmo span.cm-cmd { color: #0686bd; font-weight: bold; }
